# TROSS

./: .gitmodules  CMakeLists.txt  README.md  main.py  orchestrator.py  requirements.txt  types_.py
include/: orchestrator.h
src/: bindings.cpp  orchestrator.cpp
